--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,7 @@
     "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-socket-io": "~0.6.0",
-    "angular-chart.js": "~0.8.4"
+    "angular-socket-io": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
