--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
-    "async": "~1.4.2"
+    "components-font-awesome": "~4.4.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
